--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "main": "app.js",
   "scripts": {
     "test": "node_modules/.bin/_mocha test/unit/**/*.spec.js",
+    "postinstall": "npm run compile",
     "compile": "node_modules/.bin/tsc",
     "start": "node app/app.js"
+  },
+  "engines": {
+    "node": "8.5.0",
+    "npm": "5.4.2"
   },
   "keywords": [
     "typescript",
